# PINA

./: .buildinfo  .gitignore  .pylintrc  AGENTS.md  ANTITRUST.md  API_scheme.md  CHARTER.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.html  LICENSE.rst  MAINTAINERS.md  README.md  SECURITY.md  STEERING-COMMITTEE.md  TRADEMARKS.md  _LICENSE.html  _cite.html  _contributing.html  _installation.html  _quickstart.html  _team.html  _tutorial.html  autoregressive_prova_generic_condition.py  code_formatter.sh  genindex.html  hey.py  index.html  multiphase_problems.py  objects.inv  pinn_problem_to_test.py  pinn_problem_to_testo.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test_loggers.py  (+4 more)
.claude/commands/: pina-agentic.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: black-formatter-test.yml  black-formatter.yml  ci.yml  create-tag.yml  deployer.yml  draft-pdf.yml  export_tutorials.yml  master_cleaner.yml  monthly-tag.yml  monthly-tagger.yml  pypi-publish.yml  sphinx-build.yml  tester.yml  testing_doc.yml  testing_pr.yml  tutorial.yml  tutorial_dynamical_tester.yml  tutorial_exporter.yml
_modules/: index.html
_rst/: _code.html  _contributing.html  _installation.html  _tutorial.html  abstractproblem.html  code.html  condition.html  contributing.html  convolution.html  deeponet.html  equations.html  fnn.html  installation.html  label_tensor.html  location.html  multifeedforward.html  network.html  operator.html  operators.html  parametricproblem.html  pinn.html  plotter.html  span.html  spatialproblem.html  timedepproblem.html  trainer.html
_rst/layers/: pod.html  (+12 more)
_sources/: _cite.rst.txt  _team.rst.txt  _tutorial.rst.txt  index.rst.txt
_static/: documentation_options.js
docs/: Makefile  index.html
examples/: first_order_ode.py  run_burgers.py  run_first_order_ode.py  run_parametric_elliptic_optimal.py  run_parametric_elliptic_optimal_control_alpha.py  run_parametric_poisson.py  run_poisson.py  run_poisson_deeponet.py  run_stokes.py  run_wave.py  utils.py
joss/: paper.bib  paper.md
pina/: __init__.py  callbacks.py  cartesian.py  chebyshev.py  collector.py  condition.py  cube.py  dataset.py  deep_feed_forward.py  ellipsoid.py  graph.py  label_parameter.py  label_tensor.py  location.py  logger.py  loggers.py  loss.py  meta.py  multi_deep_feed_forward.py  operator.py  operators.py  optimizer.py  parametricproblem2d.py  pina_logger.py  pina_tensorboard.py  pinn.py  plotter.py  ppinn.py  problem.py  problem1d.py  problem2d.py  scheduler.py  segment.py  solver.py  span.py  tdproblem1d.py  trainer.py  type_checker.py  utils.py  writer.py
problems/: burgers.py  elliptic_optimal_control.py  laplacian_optimal_control_parametric.py  laplacian_parametric.py  parametric_elliptic_optimal_control_alpha_variable.py  poisson2D.py  poisson_2.py
tests/: conftest.py  test_adaptive_function.py  test_adaptive_functions.py  test_cartesian.py  test_check_consistency.py  test_collector.py  test_condition.py  test_data_manager.py  test_dataset.py  test_deeponet.py  test_difference.py  test_exclusion.py  test_fnn.py  test_graph.py  test_intersection.py  test_label_tensor.py  test_loggers.py  test_loss.py  test_network.py  test_operator.py  test_operators.py  test_optimizer.py  test_package.py  test_pinn.py  test_plotter.py  test_problem.py  test_scheduler.py  test_simplex.py  test_trainer.py  test_triangular.py  test_type_checker.py  test_union.py  test_utils.py
tutorial11/: tutorial.html
tutorial12/: tutorial.html
tutorial15/: tutorial.html
tutorial16/: tutorial.html
tutorial17/: tutorial.html
tutorial18/: tutorial.html
tutorial2/: tutorial.html
tutorial20/: tutorial.html
tutorial21/: tutorial.html
tutorial23/: tutorial.html
tutorial4/: tutorial.html
tutorial6/: tutorial.html
tutorial7/: tutorial.html
tutorial8/: tutorial.html
tutorials/: README.md  TUTORIAL_GUIDELINES.md  Tutorial Poisson.ipynb
utils/: check_skill_sync.py  mathlab_versioning.py
(+2608 files in other folders)
