[project]
name = "pina-mathlab"
version = "0.2.0"
description = "Physic Informed Neural networks for Advance modeling."
readme = "README.md"
authors = [
    {name = "PINA Contributors", email = "pina.mathlab@gmail.com"}
]
license = { text = "MIT" }
keywords = [
    "machine-learning", "deep-learning", "modeling", "pytorch", "ode", 
    "neural-networks", "differential-equations", "pde", "hacktoberfest", 
    "pinn", "physics-informed", "physics-informed-neural-networks",
    "neural-operators", "equation-learning", "lightining"
]
dependencies = [
    "torch",
    "lightning",
    "torch_geometric",
    "matplotlib",
]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = [
    "sphinx>5.0",
    "sphinx_rtd_theme",
    "sphinx_copybutton",
    "sphinx_design",
    "pydata_sphinx_theme"
]
test = [
    "pytest",
    "pytest-cov",
    "scipy"
]
dev = [
    "black @ git+https://github.com/psf/black"
]
tutorials = [
    "smithers @ git+https://github.com/mathLab/smithers.git",
]

[project.urls]
Homepage = "https://mathlab.github.io/PINA/"
Repository = "https://github.com/mathLab/PINA"

[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"

[tool.setuptools.packages.find]
include = ["pina*"]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"