[project]
name = "pina-mathlab"
version = "0.2.4"
description = "Physic Informed Neural networks for Advance modeling."
readme = "README.md"
authors = [
    {name = "PINA Contributors", email = "pina.mathlab@gmail.com"}
]
license = { text = "MIT" }
keywords = [
    "machine-learning", "deep-learning", "modeling", "pytorch", "ode", 
    "neural-networks", "differential-equations", "pde", "hacktoberfest", 
    "pinn", "physics-informed", "physics-informed-neural-networks",
    "neural-operators", "equation-learning", "lightining"
]
dependencies = [
    "torch",
    "lightning",
    "torch_geometric",
    "matplotlib",
]
requires-python = ">=3.10"

[project.optional-dependencies]
doc = [
    "sphinx>5.0,<8.2",
    "sphinx_rtd_theme",
    "sphinx_copybutton",
    "sphinx_design",
    "pydata_sphinx_theme"
]
test = [
    "pytest",
    "pytest-cov",
    "scipy"
]
dev = [
    "black"
]
tutorial = [
    "jupyter",
    "smithers",
    "torchvision",
    "tensorboard",
    "scipy",
    "numpy",
]

[project.urls]
Homepage = "https://mathlab.github.io/PINA/"
Repository = "https://github.com/mathLab/PINA"

[build-system]
requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning>=2.0,<3", ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pina*"]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
